--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/out/
 # Default ignored files
 /shelf/
 /workspace.xml
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
+*.class
